# mender-mcu-integration

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODEOWNERS  Dockerfile.ci  Kconfig  README.md  config-tls-mender.h  overlay-wifi.conf  prj.conf  renovate.json5  sdkconfig.defaults  sysbuild-mcuboot.conf  west.yml
.github/: dependabot.yml
boards/: esp32_ethernet_kit_procpu.conf  esp32_ethernet_kit_procpu.overlay  esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  mr_canhubk3_s32k344.conf  native_sim.conf  nrf52840dk_nrf52840.conf  olimex_esp32_evb_esp32_procpu.conf  olimex_esp32_evb_esp32_procpu.overlay
boards/shields/: wiznet_eth_w5500.conf  wiznet_eth_w5500.overlay
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  netup.c  netup.h
src/: certs.c  main.c  netup.c
src/modules/: noop-update-module.c  noop-update-module.h
src/utils/: callbacks.h  certs.c  certs.h  netup.c  netup.h
sysbuild/: CMakeLists.txt  mcuboot.conf
tests/integration/: README.md  callbacks.py  conftest.py  coverage.lcov  definitions.py  device.py  helpers.py  integration_tests.conf  server.py  test_mender_mcu.py
tests/integration/src/: callbacks.c  main.c
tests/integration/src/modules/: test-update-module.c  test-update-module.h
tests/integration/tests/: test_mender_mcu.py  test_state_machine.py
